--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^9.48.1",
+    "@react-three/fiber": "^8.9.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
+    "three": "^0.148.0",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
+    "@types/three": "^0.146.0",
     "react-router-dom": "^6.4.4"
   }
 }
